@@ -160,8 +160,11 @@ class PbfRule extends RuleWithUserID
         }
         PH::print_stdout( $text );
 
-        PH::print_stdout( $padding . "  From: " . $this->from->toString_inline() );
-        PH::$JSON_TMP['sub']['object'][$this->name()]['from'] = $this->from->toString_inline();
+        if( $this->from !== null )
+        {
+            PH::print_stdout( $padding . "  From: " . $this->from->toString_inline() );
+            PH::$JSON_TMP['sub']['object'][$this->name()]['from'] = $this->from->toString_inline();
+        }
 
         PH::print_stdout( $padding . "  Source: $sourceNegated " . $this->source->toString_inline() );
         PH::$JSON_TMP['sub']['object'][$this->name()]['source'] = $this->source->toString_inline();
