@@ -149,6 +149,9 @@ class MERGER extends UTIL
                 $subGroups2 = $pan->getDeviceClouds();
 
                 $alldevicegroup = array_merge( $subGroups, $subGroups2 );
+
+                $subGroups2 = $this->pan->getDeviceOnPrems();
+                $alldevicegroup = array_merge( $alldevicegroup, $subGroups2 );
             }
             elseif( $pan->isFirewall() )
                 $alldevicegroup = $pan->virtualSystems;
