@@ -1437,6 +1437,9 @@ class UTIL
                     $subGroups2 = $this->pan->getDeviceClouds();
 
                     $subGroups = array_merge( $subGroups, $subGroups2 );
+
+                    $subGroups2 = $this->pan->getDeviceOnPrems();
+                    $subGroups = array_merge( $subGroups, $subGroups2 );
                 }
 
 
@@ -1503,6 +1506,9 @@ class UTIL
                 $subGroups = $this->pan->getContainers();
                 $subGroups2 = $this->pan->getDeviceClouds();
 
+                $subGroups = array_merge( $subGroups, $subGroups2 );
+
+                $subGroups2 = $this->pan->getDeviceOnPrems();
                 $subGroups = array_merge( $subGroups, $subGroups2 );
             }
 
